fix: mobile sidebar aligned

--- a/src/pages/Admin/components/AdminDashboard/style/AdminDashboardLayout.scss
+++ b/src/pages/Admin/components/AdminDashboard/style/AdminDashboardLayout.scss
@@ -81,6 +81,7 @@
 
     .mobile-side-bar {
       display: flex;
+      align-items: center;
       justify-content: space-between;
       margin: 30px 0;
 
